# orc

./: config.h.meson  meson.build  meson_options.txt
doc/: meson.build
examples/: meson.build
orc/: meson.build  orcparse.c
orc-test/: meson.build
testsuite/: meson.build
testsuite/benchmorc/: meson.build
testsuite/orcc/: meson.build
tools/: meson.build
